Migrate client to Java 17 using OpenRewrite UpgradeToJava17 recipe.