@@ -463,9 +463,9 @@ class SkillCalculator extends JPanel
 			targetXP = Experience.getXpForLevel(targetLevel);
 		}
 
-		final String cXP = String.format("%,d", currentXP);
-		final String tXP = String.format("%,d", targetXP);
-		final String nXP = String.format("%,d", targetXP - currentXP);
+		final String cXP = "%,d".formatted(currentXP);
+		final String tXP = "%,d".formatted(targetXP);
+		final String nXP = "%,d".formatted(targetXP - currentXP);
 		uiInput.setCurrentLevelInput(currentLevel);
 		uiInput.setCurrentXPInput(cXP);
 		uiInput.setTargetLevelInput(targetLevel);
